Được tạo bằng Colaboratory

--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTvbkEbUsI9BUU1oQiaVFU",
+      "authorship_tag": "ABX9TyNLEs+NPuqYVDUplRCYabFH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "print(kingdoms[4:])\n",
         "print(kingdoms[1:0])\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
         "print(kingdoms[-2:])\n",
         "print(kingdoms[-1:-2])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "appointments += ['16:30']\n",
         "print(appointments)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
         "ids.sort()\n",
         "print(ids)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         "print(len(alkaline_earth_metals))\n",
         "print(max(alkaline_earth_metals))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "temps_in_celsius = cool_temps + warm_temps\n",
         "print(temps_in_celsius)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "print(same_first_last(['apple', 'banana', 'pear']))\n",
         "print(same_first_last([4.0, 4.5]))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
         "print( is_longer(['abcdef'], ['ab', 'cd', 'ef']))\n",
         "print(is_longer(['a', 'b', 'c'], [1, 2, 3]))"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "units =[['km', 'miles', 'league'],['kg', 'pound', 'stone']]\n",
         "print(units[0])"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
       "source": [
         "print(units[-1] or units[1])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +350,7 @@
       "source": [
         "print(units[0][0])"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
       "source": [
         "print(units[1][0])"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +396,7 @@
       "source": [
         "print(units[0][1:])"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +419,7 @@
       "source": [
         "print(units[1][0:2])"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
       "source": [
         "print(units[-2])"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
       "source": [
         "print(units[-1])"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
       "source": [
         "print(units[-2][-3])"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +511,7 @@
       "source": [
         "print(units[-1][-3])"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +534,7 @@
       "source": [
         "print(units[-2][-2:])"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,13 +557,161 @@
       "source": [
         "print(units[-1][:-1])"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['kg', 'pound']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1dNvGKG9HDVm"
+      },
+      "source": [
+        "Chương 9\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Tbzz8PnHFtx",
+        "outputId": "b1e38a01-e805-4d05-cdb2-47f53037e88a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "celegans_phenotypes = ['Emb','Him', 'Unc', 'Lon', 'Dpy', 'Sma']\n",
+        "for phenotype in celegans_phenotypes:\n",
+        "  print(phenotype)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Emb\n",
+            "Him\n",
+            "Unc\n",
+            "Lon\n",
+            "Dpy\n",
+            "Sma\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pn2_OehNHRaJ",
+        "outputId": "610da338-4d80-4984-e24a-c15219fac7e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "half_lives =[87.74, 24110.0,6537.0, 14.4, 376000.0]\n",
+        "for value in half_lives:\n",
+        "  print(value, end=' ')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "87.74 24110.0 6537.0 14.4 376000.0 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yMj0ytzgHU5L",
+        "outputId": "6cdffed4-2861-41f7-c3b4-08af1dc4383d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "whales = [5, 4, 7, 3, 2, 3, 2, 6, 4, 2, 1, 7, 1, 3]\n",
+        "more_whales = []\n",
+        "for count in whales:\n",
+        "  more_whales.append(count + 1)\n",
+        "  print(more_whales)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6]\n",
+            "[6, 5]\n",
+            "[6, 5, 8]\n",
+            "[6, 5, 8, 4]\n",
+            "[6, 5, 8, 4, 3]\n",
+            "[6, 5, 8, 4, 3, 4]\n",
+            "[6, 5, 8, 4, 3, 4, 3]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7, 5]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7, 5, 3]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7, 5, 3, 2]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7, 5, 3, 2, 8]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7, 5, 3, 2, 8, 2]\n",
+            "[6, 5, 8, 4, 3, 4, 3, 7, 5, 3, 2, 8, 2, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t-QgTXNVHb-s",
+        "outputId": "561d3b1a-0476-435c-c743-94288ff81f1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "alkaline_earth_metals = [[4, 9.012], [12, 24.305],[20, 40.078], [38, 87.62],[56, 137.327], [88, 226]]\n",
+        "for inner_list in alkaline_earth_metals:\n",
+        "  print(inner_list[0])\n",
+        "  print(inner_list[1])\n",
+        "\n",
+        "number_and_weight = []\n",
+        "for inner_list in alkaline_earth_metals:\n",
+        "  number_and_weight.append(inner_list[0])\n",
+        "  number_and_weight.append(inner_list[1])\n",
+        "print(number_and_weight)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "9.012\n",
+            "12\n",
+            "24.305\n",
+            "20\n",
+            "40.078\n",
+            "38\n",
+            "87.62\n",
+            "56\n",
+            "137.327\n",
+            "88\n",
+            "226\n",
+            "[4, 9.012, 12, 24.305, 20, 40.078, 38, 87.62, 56, 137.327, 88, 226]\n"
           ]
         }
       ]
